--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "derafu-project",
   "version": "1.0.0",
-  "description": "Derafu: Project - Slogan",
+  "description": "Derafu: API - API with Autodiscovery",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
